[GOBBLIN-707][GOBBLIN-694][GOBBLIN-477][GOBBLIN-719] rewrite gobblin script to combine all modes and command
[GOBBLIN-719] fix invalid git links for classes in
docs

fixing all file paths and linksA

[GOBBLIN-707]-rewrite gobblin script combining all
gobblin modes and commands along with configs

updating as per review 1

updates docs as per gobblin.sh changes + some more
improvements in gobblin.sh

updates docs as per gobblin.sh changes + some more
improvements in gobblin.sh - 2

Merge branch 'master' of
github.com:jhsenjaliya/incubator-gobblin

Merge branch 'master' of
github.com:apache/incubator-gobblin

Merge branch 'master' of
github.com:apache/incubator-gobblin

[GOBBLIN-707]-rewrite gobblin script combining all
gobblin modes and commands along with configs

updating as per review 1

updates docs as per gobblin.sh changes + some more
improvements in gobblin.sh

updates docs as per gobblin.sh changes + some more
improvements in gobblin.sh - 2

Merge branch 'GOBBLIN-707' of
github.com:jhsenjaliya/incubator-gobblin into
GOBBLIN-707

adding project version

Merge branch 'master' of
github.com:apache/incubator-gobblin into
GOBBLIN-707

arrange HADOOP classpath

restructure command vs services help

all command and cli classes under GobblinCli with
Alias, remove Cli class

uncomment required code

keep individual script that calls new gobblin
script internally

resolves findBug error, replaced system exit with
return

update in config, keeping default as before

update to yarn, MR config

updating gobblin.sh and adding gobblin-service
config

Merge branch 'master' into GOBBLIN-707

updates to gobblin.sh and help on cli classes

rename service manager to gobblin-as-service

merge upstream changes

revert to upstream config to put change later

Closes #2578 from jhsenjaliya/GOBBLIN-707